fix input cut off

--- a/client/assets/styles/scss/box/box-header.scss
+++ b/client/assets/styles/scss/box/box-header.scss
@@ -35,8 +35,10 @@
   font-size: 23px;
   height: 45px;
   line-height: 45px;
+  margin-left: -15px;
   max-width: 540px;
   overflow-x: auto;
+  padding-left: 15px;
   white-space: nowrap;
 }
 
